--- a/fstab.yaml
+++ b/fstab.yaml
@@ -1,2 +1,5 @@
 mountpoints:
-  /: https://drive.google.com/drive/u/0/folders/1MGzOt7ubUh3gu7zhZIPb7R7dyRzG371j
+  /:
+    url: https://author-p96606-e882934.adobeaemcloud.com/
+    type: "markup"
+    suffix: ".md.html"
